--- a/Epidata_Proposal.html
+++ b/Epidata_Proposal.html
@@ -85,20 +85,20 @@ ul.task-list li input[type="checkbox"] {
 <p>Use data visualizations to explore, compare and analyze several historically well-known pandemics.</p>
 <section id="goal-description" class="level2">
 <h2 class="anchored" data-anchor-id="goal-description">Goal Description</h2>
-<p>The main goal of this project is to dive deeper into some significant pandemics from human history, including Yellow Fever Epidemic, Smallpox Epidemic, 1918 Influenza Pandemic, H1N1 Influenza and COVID-19. We are aware, to some extent, of the fact that these pandemics caused great loss and profoundly impacted human society in numerous ways. However, we want to use data visualizations to visually present and explore the similarities and differences among these pandemics that happened in different time periods. How fast did the infection spread? What were the mortality rates? Were there seasonal patterns? How were the economic impacted by these pandemics at the time? How long after news reported the disease did the pandemic outbreaks happen on a large scale? These are some potential questions we could explore in this project.</p>
+<p>The main goal of this project is to dive deeper into some significant pandemics from human history, including Cholera, Dengue, and COVID-19. We are aware, to some extent, of the fact that these pandemics or diseases caused great loss and profoundly impacted human society in numerous ways. However, we want to use data visualizations to visually present and explore the similarities and differences among these pandemics or diseases that happened in large scale in different time periods. How fast did the infection spread? What were the mortality rates? Were there seasonal patterns? How were the economic impacted by these pandemics at the time? How long after news reported the disease did the pandemic outbreaks happen on a large scale? These are some potential questions we could explore in this project.</p>
 <p>Here are some proposed tasks that we plan to implement in this project:</p>
 <ul>
 <li><p>(Task 1) For each pandemic, we will use a stream graph to plot infected counts and death counts with time. The infected counts will be the upper part and the death counts will be the lower part, with x-axis being the timeline. We could see how fatal the disease was at that time.</p></li>
 <li><p>(Task 2) For each pandemic, we will use R to create a Shiny app to implement a slidebar to slide through the time period affected by this pandemic, with each specific time corresponding to a heatmap that depicts the infected areas in the world map. We could therefore visualize the geographical spread of the pandemic as time went by.</p></li>
 <li><p>(Task 3) Explore the time difference between when the news or articles discussed about the pandemic came out and when the pandemic outbreaks actually happened in larger scale. This step will only apply to those pandemics in modern days when there were recorded news media.</p></li>
-<li><p>(Task 4) For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration. We could understand the differences in the conditions among different pandemics.</p></li>
+<li><p>(Task 4) For each pandemic, we will use a radar chart to present the pandemic variables, such as incubation period, mortality rate, and illness duration, etc. We could understand the differences in the conditions among different pandemics.</p></li>
 </ul>
 </section>
 <section id="weekly-schedule" class="level2">
 <h2 class="anchored" data-anchor-id="weekly-schedule">Weekly Schedule</h2>
 <table class="caption-top table">
 <colgroup>
-<col style="width: 17%">
+<col style="width: 16%">
 <col style="width: 16%">
 <col style="width: 16%">
 <col style="width: 16%">
